--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   cupertino_icons: ^1.0.6
 
   equatable: ^2.0.5
+  google_maps_flutter: ^2.6.1
+  uuid: ^4.4.0
+  cloud_firestore: ^4.17.5
+  built_value: ^8.9.2
 
   #statement
   flutter_bloc: ^8.1.5
